updated book page

--- a/flights/templates/flights/flight.html
+++ b/flights/templates/flights/flight.html
@@ -25,6 +25,5 @@
   <input type="submit">
 </form>
 <br>
-<a href="{% url 'index' %}">Back to Flight List</a>
-
+<a href="{% url 'indx' %}">All Flights</a>
 {% endblock %}
