--- a/flights/templates/flights/flight.html
+++ b/flights/templates/flights/flight.html
@@ -1,12 +1,12 @@
 {% extends "flights/layout.html" %}
 {% block body %}
-  <h1> Flight {{flight.id}} </h1>
+  <h1> Flight No: {{flight.id}} </h1>
   <ul>
     <li> Origin: {{flight.origin}} </li>
     <li> Destination : {{flight.destination}} </li>
-    <li>Duration : {{flight.duration}}</li>
+    <li>Duration : {{flight.duration}} mins</li>
   </ul>
-  <h2>Passengers</h2>
+  <h3>Passengers List</h3>
   <ul>
     {% for passenger in passengers %}
       <li>{{ passenger }}</li>
@@ -14,7 +14,7 @@
       <li>No passenger</li>
     {% endfor %}
   </ul>
-<h2>Add Passenger</h2>
+<h4>Add Passenger</h4>
 <form action="{% url 'book' flight.id %}" method="post">
   {% csrf_token %}
   <select name="passenger">
@@ -23,7 +23,6 @@
     {% endfor %}
   </select>
   <input type="submit">
-</form>
-<br>
-<a href="{% url 'indx' %}">All Flights</a>
+</form><br>
+<a href="{% url 'indx' %}" style="color:black;">Flights List</a>
 {% endblock %}
