--- a/flights/templates/flights/index.html
+++ b/flights/templates/flights/index.html
@@ -1,13 +1,9 @@
 {% extends "flights/layout.html" %}
 {% block body %}
-  <h1>Flights</h1>
-  <ul>
+  <h2>Flights List</h2>
     {% for flight in flights %}
-      <li>
         <a href="{% url 'flight' flight.id %}">
           Flight {{ flight.id }} : {{ flight.origin }} to {{ flight.destination }}
-        </a>
-      </li>
+        </a><br>
     {% endfor %}
-  </ul>
 {% endblock %}
