--- a/flights/templates/flights/layout.html
+++ b/flights/templates/flights/layout.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% load static %}
     <title>Flights</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/flight.css' %}">
   </head>
   <body>
     {% block body %}
